--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marketplace",
   "version": "0.1.0",
-  "homepage": "https://DanielSzemik.github.io/Nft-marketplace-gh-pages",
+  "homepage": "https://DanielSzemik.github.io/nftMarketplace",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
